flux/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devcontainer-${NAME}
spec:
  template:
    metadata:
      labels:
        app: devcontainer
        instance: ${NAME}
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: devcontainer
          image: ghcr.io/cpfarhood/devcontainer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5800
              name: vnc-web
              protocol: TCP
          volumeMounts:
            - name: userhome
              mountPath: /home
            - name: workspace
              mountPath: /workspace
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          livenessProbe:
            httpGet:
              path: /
              port: 5800
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5800
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: workspace
          emptyDir: {}
        - name: userhome
          persistentVolumeClaim:
            claimName: userhome-${NAME}
