flux/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: devcontainer-${NAME}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: devcontainer-${NAME}
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: devcontainer
          image: ghcr.io/cpfarhood/devcontainer:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5800
              name: vnc-web
              protocol: TCP
          volumeMounts:
            - name: userhome
              mountPath: /home
            - name: workspace
              mountPath: /workspace
          resources:
            requests:
              memory: "2Gi"
              cpu: "1000m"
            limits:
              memory: "8Gi"
              cpu: "4000m"
          livenessProbe:
            httpGet:
              path: /
              port: 5800
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 5800
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: workspace
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: userhome
      spec:
        accessModes: ["ReadWriteMany"]
        storageClassName: "ceph-filesystem"
        resources:
          requests:
            storage: 10Gi
