flux/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: antigravity
spec:
  parentRefs:
    - name: external
      namespace: gateway-system
  hostnames:
    - ${FQDN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: antigravity
          port: 5800
          weight: 1
